src/org/jessies/talc/bytecode/ClassFileWriter.java: use "Short.valueOf" instead of "new Short".